# ZED_2i_demo

./: .gitignore  CMakeLists.txt  README.en.md  README.md  package.xml
docs/: INTEGRATION.md
launch/: zed2i.launch.py
resources/system_rules/: 60-zed-buffers.conf  99-slabs.rules
scripts/: apply_system_rules.sh  check_connection.sh  run_quick_test.sh  run_zed_depth_viewer.sh  run_zed_diagnostic.sh  run_zed_explorer.sh  run_zed_ros2.sh  run_zed_rviz.sh  setup_env.sh  setup_ros2_zed.sh
src/: zed_quick_test.py
