<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zed_2i_bringup</name>
  <version>0.1.0</version>
  <description>Minimal ROS 2 Humble bringup package for a Stereolabs ZED 2i camera.</description>
  <maintainer email="user@example.com">ZED 2i Demo Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>zed_wrapper</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
